--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BACKEND_URL=http://localhost:8080
-VITE_BACKEND_PREFIX=/api
-VITE_ACCESS_TOKEN_NAME=reading_web_jwt
-VITE_REFRESH_ACCESS_TOKEN_NAME=reading_web_refresh_token
+#VITE_BACKEND_URL=http://localhost:8080
+#VITE_BACKEND_PREFIX=/api
+#VITE_ACCESS_TOKEN_NAME=reading_web_jwt
+#VITE_REFRESH_ACCESS_TOKEN_NAME=reading_web_refresh_token
