--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BACKEND_URL=https://v-story-be.onrender.com
-VITE_BACKEND_PREFIX=/api
+#VITE_BACKEND_URL=<your-be-url>
+#VITE_BACKEND_PREFIX=/api
 VITE_ACCESS_TOKEN_NAME=reading_web_jwt
 VITE_REFRESH_ACCESS_TOKEN_NAME=reading_web_refresh_token
